avoid input overflowing dialog on mobile layout

--- a/css/index.css
+++ b/css/index.css
@@ -120,6 +120,7 @@ input {
     color: var(--text-color);
     border: var(--border);
     border-radius: 15px;
+    max-width: 100%;
     padding: 6px;
 }
 
